<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_XMotion_Status" Id="{3d7363da-2e29-4b37-87b0-ac8ca6519e59}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_XMotion_Status :
(
	StartUp 	:= 0,
	Aborting 	:= 1,
	Aborted 	:= 2,	
	Resetting   := 3,
	Stopped  	:= 4,
	Preparing   := 5,
	Prepared    := 6,
	Execute 	:= 7,
	HoldOnError := 8
	
) DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>